--- a/package.json
+++ b/package.json
@@ -52,10 +52,13 @@
     "@mui/material": "^5.14.20",
     "@mui/x-date-pickers": "^5.0.20",
     "@reduxjs/toolkit": "^1.9.5",
-    "@safe-global/api-kit": "^2.0.0",
-    "@safe-global/protocol-kit": "^2.0.0",
+    "@safe-global/api-kit": "2.1.0-alpha.0",
+    "@safe-global/protocol-kit": "3.0.0-alpha.0",
     "@safe-global/safe-apps-sdk": "^9.0.0-next.1",
-    "@safe-global/safe-deployments": "1.28.0",
+    "@safe-global/safe-core-sdk": "^3.3.5",
+    "@safe-global/safe-core-sdk-utils": "^1.7.4",
+    "@safe-global/safe-ethers-lib": "^1.9.4",
+    "@safe-global/safe-deployments": "1.32.0",
     "@safe-global/safe-gateway-typescript-sdk": "^3.14.0",
     "@safe-global/safe-modules-deployments": "^1.2.0",
     "@sentry/react": "^7.91.0",
@@ -101,7 +104,7 @@
     "@faker-js/faker": "^8.1.0",
     "@next/bundle-analyzer": "^13.5.6",
     "@openzeppelin/contracts": "^4.9.2",
-    "@safe-global/safe-core-sdk-types": "^3.0.1",
+    "@safe-global/safe-core-sdk-types": "4.0.0-alpha.0",
     "@sentry/types": "^7.74.0",
     "@svgr/webpack": "^6.3.1",
     "@testing-library/cypress": "^8.0.7",
