--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "cypress:run": "cypress run",
     "cypress:ci": "yarn cypress:run --config baseUrl=http://localhost:8080 --spec cypress/e2e/smoke/*.cy.js",
     "serve": "npx -y serve out -p ${REVERSE_PROXY_UI_PORT:=8080}",
-    "static-serve": "yarn build && yarn serve"
+    "static-serve": "yarn build && yarn serve",
+    "proxy": "lcp --proxyUrl https://api.1inch.dev --credentials"
   },
   "engines": {
     "node": ">=16"
@@ -39,6 +40,7 @@
     "@safe-global/api-kit/**/ethers": "^6.10.0"
   },
   "dependencies": {
+    "@1inch/fusion-sdk": "^0.1.13",
     "@ducanh2912/next-pwa": "^9.7.1",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.0",
@@ -92,6 +94,7 @@
     "react-papaparse": "^4.0.2",
     "react-qr-reader": "2.2.1",
     "react-redux": "^8.0.5",
+    "redaxios": "^0.5.1",
     "semver": "^7.5.2"
   },
   "devDependencies": {
@@ -130,6 +133,7 @@
     "fake-indexeddb": "^4.0.2",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
+    "local-cors-proxy": "^1.1.0",
     "prettier": "^2.7.0",
     "ts-prune": "^0.10.3",
     "typechain": "^8.3.2",
