--- a/package.json
+++ b/package.json
@@ -64,8 +64,10 @@
     "@safe-global/safe-modules-deployments": "^1.2.0",
     "@sentry/react": "^7.91.0",
     "@spindl-xyz/attribution-lite": "^1.4.0",
+    "@stakekit/widget": "^0.0.114",
     "@tkey-mpc/common-types": "^8.2.2",
     "@truffle/hdwallet-provider": "^2.1.4",
+    "@vanilla-extract/next-plugin": "^2.3.6",
     "@walletconnect/utils": "^2.11.1",
     "@walletconnect/web3wallet": "^1.10.1",
     "@web3-onboard/coinbase": "^2.2.6",
@@ -98,7 +100,9 @@
     "react-hook-form": "7.41.1",
     "react-papaparse": "^4.0.2",
     "react-redux": "^8.0.5",
-    "semver": "^7.5.2"
+    "semver": "^7.5.2",
+    "viem": "^1.21.4",
+    "wagmi": "^1.4.13"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.1.0",
