--- a/package.json
+++ b/package.json
@@ -121,13 +121,13 @@
     "@types/react-dom": "18.2.13",
     "@types/react-gtm-module": "^2.0.1",
     "@types/semver": "^7.3.10",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@walletconnect/types": "^2.11.1",
     "cross-env": "^7.0.3",
     "cypress": "^12.15.0",
     "cypress-file-upload": "^5.0.8",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -139,7 +139,7 @@
     "prettier": "^2.7.0",
     "ts-prune": "^0.10.3",
     "typechain": "^8.3.2",
-    "typescript": "4.9.4",
+    "typescript": "^5.3.3",
     "typescript-plugin-css-modules": "^4.2.2",
     "webpack": "^5.88.2"
   },
