--- a/package.json
+++ b/package.json
@@ -88,11 +88,11 @@
     "idb-keyval": "^6.2.1",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
-    "next": "^13.5.6",
+    "next": "^14.1.0",
     "papaparse": "^5.3.2",
     "qrcode.react": "^3.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-gtm-module": "^2.0.11",
     "react-hook-form": "7.41.1",
@@ -117,8 +117,8 @@
     "@types/lodash": "^4.14.182",
     "@types/node": "18.11.18",
     "@types/qrcode": "^1.4.2",
-    "@types/react": "18.2.28",
-    "@types/react-dom": "18.2.13",
+    "@types/react": "^18.2.60",
+    "@types/react-dom": "^18.2.19",
     "@types/react-gtm-module": "^2.0.1",
     "@types/semver": "^7.3.10",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
