tests: update test folders

--- a/.github/workflows/e2e-hp-ondemand.yml
+++ b/.github/workflows/e2e-hp-ondemand.yml
@@ -1,9 +1,9 @@
-name: Regression on demand tests
+name: Happy path on demand tests
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 4 * * 1-5'
+    - cron: '0 4 * * 1,4'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -12,7 +12,7 @@ concurrency:
 jobs:
   e2e:
     runs-on: ubuntu-20.04
-    name: Cypress Regression on demand tests
+    name: Cypress Happy path on demand tests
     strategy:
       fail-fast: false
       matrix:
@@ -24,10 +24,8 @@ jobs:
         with:
           secrets: ${{ toJSON(secrets) }}
           spec: |
-            cypress/e2e/regression/*.cy.js
-            cypress/e2e/safe-apps/*.cy.js
-            cypress/e2e/smoke/*.cy.js
-          group: 'Regression on demand tests'
+            cypress/e2e/happypath/*.cy.js
+          group: 'Happy path on demand tests'
 
       - name: Python setup
         if: always()
@@ -55,6 +53,6 @@ jobs:
           --username ${{ secrets.TESTRAIL_USERNAME }} \
           --password ${{ secrets.TESTRAIL_PASSWORD }} \
           parse_junit \
-          --title "Automated Tests, branch: ${GITHUB_REF_NAME}" \
+          --title "Happy path Tests, branch: ${GITHUB_REF_NAME}" \
           --run-description ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} \
           -f "reports/junit-report.xml"
