--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "cypress:ci": "yarn cypress:run --config baseUrl=http://localhost:8080 --spec cypress/e2e/smoke/*.cy.js",
     "serve": "npx -y serve out -p ${REVERSE_PROXY_UI_PORT:=8080}",
     "static-serve": "yarn build && yarn serve",
-    "update-wc": "yarn add @walletconnect/web3wallet@latest @walletconnect/utils@latest @walletconnect/types@latest",
+    "update-wc": "yarn add @walletconnect/web3wallet@latest @walletconnect/utils@latest; yarn add -D @walletconnect/types@latest",
     "prepare": "husky"
   },
   "engines": {
     "node": ">=16"
   },
   "resolutions": {
-    "@web3-onboard/trezor/**/protobufjs": "^7.2.4",
-    "@walletconnect/core": "^2.11.1",
+    "@walletconnect/core": "^2.11.2",
     "@walletconnect/ethereum-provider": "^2.11.2",
+    "@web3-onboard/trezor/**/protobufjs": "^7.2.4",
     "@safe-global/safe-core-sdk-types/**/ethers": "^6.10.0",
     "@safe-global/protocol-kit/**/ethers": "^6.10.0",
     "@safe-global/api-kit/**/ethers": "^6.10.0"
@@ -66,15 +66,15 @@
     "@spindl-xyz/attribution-lite": "^1.4.0",
     "@tkey-mpc/common-types": "^8.2.2",
     "@truffle/hdwallet-provider": "^2.1.4",
-    "@walletconnect/utils": "^2.11.1",
-    "@walletconnect/web3wallet": "^1.10.1",
+    "@walletconnect/utils": "^2.11.3",
+    "@walletconnect/web3wallet": "^1.10.3",
     "@web3-onboard/coinbase": "^2.2.6",
-    "@web3-onboard/core": "^2.21.2",
-    "@web3-onboard/injected-wallets": "^2.10.7",
+    "@web3-onboard/core": "^2.21.3",
+    "@web3-onboard/injected-wallets": "^2.10.12",
     "@web3-onboard/keystone": "^2.3.7",
     "@web3-onboard/ledger": "2.3.2",
     "@web3-onboard/trezor": "^2.4.2",
-    "@web3-onboard/walletconnect": "^2.5.4-alpha.1",
+    "@web3-onboard/walletconnect": "^2.5.4",
     "@web3auth/mpc-core-kit": "^1.1.3",
     "blo": "^1.1.1",
     "bn.js": "^5.2.1",
@@ -122,7 +122,7 @@
     "@types/react-gtm-module": "^2.0.1",
     "@types/semver": "^7.3.10",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@walletconnect/types": "^2.11.1",
+    "@walletconnect/types": "^2.11.3",
     "cross-env": "^7.0.3",
     "cypress": "^12.15.0",
     "cypress-file-upload": "^5.0.8",
