--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,9 @@
 {
-  "extends": ["next", "prettier", "plugin:prettier/recommended"],
+  "extends": [
+    "next",
+    "prettier",
+    "plugin:prettier/recommended"
+  ],
   "rules": {
     "@next/next/no-img-element": "off",
     "@next/next/google-font-display": "off",
@@ -14,8 +18,17 @@
         "additionalHooks": "useAsync"
       }
     ],
-    "no-only-tests/no-only-tests": "error"
+    "no-only-tests/no-only-tests": "error",
+    "prettier/prettier": "off"
   },
-  "ignorePatterns": ["node_modules/", ".next/", ".github/"],
-  "plugins": ["unused-imports", "@typescript-eslint", "no-only-tests"]
+  "ignorePatterns": [
+    "node_modules/",
+    ".next/",
+    ".github/"
+  ],
+  "plugins": [
+    "unused-imports",
+    "@typescript-eslint",
+    "no-only-tests"
+  ]
 }
