--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "next lint --fix",
     "prettier": "prettier -w \"{src,cypress,mocks,scripts}/**/*.{ts,tsx,css,js}\"",
     "fix": "yarn lint:fix && ts-prune && yarn prettier",
-    "test": "cross-env TZ=UTC DEBUG_PRINT_LIMIT=30000 jest",
+    "test": "cross-env TZ=CET DEBUG_PRINT_LIMIT=30000 jest",
     "test:ci": "yarn test --ci --silent --coverage --json --watchAll=false --testLocationInResults --outputFile=report.json",
     "test:coverage": "yarn test --coverage --watchAll=false",
     "cmp": "./scripts/cmp.sh",
@@ -136,6 +136,7 @@
     "husky": "^9.0.11",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
+    "mockdate": "^3.0.5",
     "prettier": "^2.7.0",
     "ts-prune": "^0.10.3",
     "typechain": "^8.3.2",
