--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,11 @@
       ],
       "@/public/*": [
         "./public/*"
-      ]
+      ],
+      "viem": ["src/types/disable-viem-wagmi.d.ts"],
+      "wagmi": ["src/types/disable-viem-wagmi.d.ts"],
+      "wagmi/*": ["src/types/disable-viem-wagmi.d.ts"],
+      "@wagmi/*": ["src/types/disable-viem-wagmi.d.ts"]
     },
     "plugins": [
       {
