feat: add a build of storybook to PRs
build storybook

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -42,6 +42,8 @@ jobs:
           secrets: ${{ toJSON(secrets) }}
           prod: ${{ github.ref == 'refs/heads/main' }}
 
+      - uses: ./.github/workflows/build-storybook
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
