--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -92,7 +92,11 @@ jobs:
             ## Branch preview
             ✅  Deploy successful!
 
+            Website:
             https://${{ steps.extract_branch.outputs.branch }}--walletweb.review-wallet-web.5afe.dev/home?safe=eth:0xA77DE01e157f9f57C7c4A326eeE9C4874D0598b6
+            
+            Storybook
+            https://${{ steps.extract_branch.outputs.branch }}--walletweb.review-wallet-web.5afe.dev/storybook
           message-failure: |
             ## Branch preview
             ❌  Deploy failed!
