--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@safe-global/protocol-kit": "^3.0.2",
     "@safe-global/safe-apps-sdk": "^9.0.0-next.1",
     "@safe-global/safe-deployments": "^1.34.0",
-    "@safe-global/safe-gateway-typescript-sdk": "3.21.0-alpha.1",
+    "@safe-global/safe-gateway-typescript-sdk": "3.21.0-alpha.2",
     "@safe-global/safe-modules-deployments": "^1.2.0",
     "@sentry/react": "^7.91.0",
     "@spindl-xyz/attribution-lite": "^1.4.0",
@@ -102,6 +102,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.1",
+    "@cowprotocol/app-data": "^2.1.0",
     "@faker-js/faker": "^8.1.0",
     "@next/bundle-analyzer": "^13.5.6",
     "@openzeppelin/contracts": "^4.9.2",
