--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@safe-global/safe-core-sdk": "^3.3.5",
     "@safe-global/safe-core-sdk-utils": "^1.7.4",
     "@safe-global/safe-ethers-lib": "^1.9.4",
-    "@safe-global/safe-gateway-typescript-sdk": "3.21.0-alpha.1",
+    "@safe-global/safe-gateway-typescript-sdk": "3.21.0-alpha.3",
     "@safe-global/safe-modules-deployments": "^1.2.0",
     "@sentry/react": "^7.91.0",
     "@spindl-xyz/attribution-lite": "^1.4.0",
@@ -105,6 +105,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.1",
+    "@cowprotocol/app-data": "^2.1.0",
     "@faker-js/faker": "^8.1.0",
     "@next/bundle-analyzer": "^13.5.6",
     "@openzeppelin/contracts": "^4.9.2",
