Chore: update the PR review domain

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -93,10 +93,10 @@ jobs:
             ✅  Deploy successful!
 
             **Website:**
-            https://${{ steps.extract_branch.outputs.branch }}--walletweb.review-wallet-web.5afe.dev/home?safe=eth:0xA77DE01e157f9f57C7c4A326eeE9C4874D0598b6
+            https://${{ steps.extract_branch.outputs.branch }}--walletweb.review.5afe.dev/home?safe=eth:0xA77DE01e157f9f57C7c4A326eeE9C4874D0598b6
 
             **Storybook:**
-            https://${{ steps.extract_branch.outputs.branch }}--walletweb.review-wallet-web.5afe.dev/storybook/
+            https://${{ steps.extract_branch.outputs.branch }}--walletweb.review.5afe.dev/storybook/
           message-failure: |
             ## Branch preview
             ❌  Deploy failed!
