--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@web3-onboard/trezor": "^2.4.2",
     "@web3-onboard/walletconnect": "^2.5.4",
     "@web3auth/mpc-core-kit": "^1.1.3",
+    "@web3modal/ethers": "^4.2.0",
     "blo": "^1.1.1",
     "bn.js": "^5.2.1",
     "classnames": "^2.3.1",
