fix: Add project id to env example

--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,4 @@ NEXT_PUBLIC_REDEFINE_API=
 NEXT_PUBLIC_SOCIAL_WALLET_OPTIONS_STAGING=
 NEXT_PUBLIC_SOCIAL_WALLET_OPTIONS_PRODUCTION=
 
+NEXT_PUBLIC_WEB3MODAL_PROJECT_ID=
