--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -41,7 +41,7 @@ jobs:
       - uses: ./.github/workflows/build
         with:
           secrets: ${{ toJSON(secrets) }}
-          prod: ${{ github.base_ref == 'dev' }} # PRs to main are Release Candidates and must be tested with prod settings
+          prod: ${{ github.base_ref == 'main' }} # PRs to main are Release Candidates and must be tested with prod settings
 
       - uses: ./.github/workflows/build-storybook
 
