--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@safe-global/api-kit": "^2.3.2",
     "@safe-global/protocol-kit": "^3.1.1",
-    "@safe-global/safe-apps-sdk": "^9.0.0-next.1",
+    "@safe-global/safe-apps-sdk": "^9.1.0",
     "@safe-global/safe-deployments": "^1.36.0",
     "@safe-global/safe-gateway-typescript-sdk": "3.21.1",
     "@safe-global/safe-modules-deployments": "^1.2.0",
