Skip flaky tests

--- a/.github/workflows/e2e-hp-ondemand.yml
+++ b/.github/workflows/e2e-hp-ondemand.yml
@@ -16,8 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # containers: [1, 2, 3]
-        containers: [1]
+        containers: [1, 2, 3]
     steps:
       - uses: actions/checkout@v4
 
