--- a/.github/workflows/e2e-hp-ondemand.yml
+++ b/.github/workflows/e2e-hp-ondemand.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           secrets: ${{ toJSON(secrets) }}
           spec: |
-            cypress/e2e/happypath/tx_history_filter_hp_1.cy.js
+            cypress/e2e/happypath/*.cy.js
           group: 'Happy path on demand tests'
 
       - name: Python setup
