WIP: m/n Safe support

--- a/package.json
+++ b/package.json
@@ -56,10 +56,11 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@safe-global/api-kit": "^2.3.2",
     "@safe-global/protocol-kit": "^4.0.1",
+    "@safe-global/relay-kit": "^3.0.1",
     "@safe-global/safe-apps-sdk": "^9.1.0",
     "@safe-global/safe-deployments": "^1.36.0",
     "@safe-global/safe-gateway-typescript-sdk": "3.21.1",
-    "@safe-global/safe-modules-deployments": "^1.2.0",
+    "@safe-global/safe-modules-deployments": "^2.2.0",
     "@sentry/react": "^7.91.0",
     "@spindl-xyz/attribution-lite": "^1.4.0",
     "@walletconnect/utils": "^2.13.1",
