--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.1",
     "@cowprotocol/app-data": "^2.1.0",
+    "@cowprotocol/types": "^0.1.0",
     "@faker-js/faker": "^8.1.0",
     "@next/bundle-analyzer": "^13.5.6",
     "@openzeppelin/contracts": "^4.9.2",
