--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@web3-onboard/injected-wallets": "^2.10.14",
     "@web3-onboard/keystone": "^2.3.7",
     "@web3-onboard/ledger": "2.3.2",
+    "@web3-onboard/metamask": "^2.1.2",
     "@web3-onboard/trezor": "^2.4.2",
     "@web3-onboard/walletconnect": "^2.5.4",
     "blo": "^1.1.1",
