--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@safe-global/api-kit": "^2.3.2",
     "@safe-global/protocol-kit": "^3.1.1",
+    "@safe-global/safe-apps-provider": "^0.18.3",
     "@safe-global/safe-apps-sdk": "^9.1.0",
     "@safe-global/safe-deployments": "^1.37.1",
     "@safe-global/safe-gateway-typescript-sdk": "3.21.8",
@@ -66,6 +67,7 @@
     "@walletconnect/web3wallet": "^1.12.1",
     "@web3-onboard/coinbase": "^2.2.6",
     "@web3-onboard/core": "^2.21.4",
+    "@web3-onboard/gnosis": "^2.3.1",
     "@web3-onboard/injected-wallets": "^2.10.14",
     "@web3-onboard/keystone": "^2.3.7",
     "@web3-onboard/ledger": "2.3.2",
