--- a/.github/workflows/cypress/action.yml
+++ b/.github/workflows/cypress/action.yml
@@ -47,7 +47,8 @@ runs:
       shell: bash
       run: yarn serve &
 
-    - uses: cypress-io/github-action@v4
+    - name: Run Cypress Tests
+      uses: cypress-io/github-action@v4
       with:
         spec: ${{ inputs.spec }}
         group: ${{ inputs.group }}
@@ -55,9 +56,14 @@ runs:
         browser: chrome
         record: true
         config: baseUrl=http://localhost:8080
-        command: npx cypress run --spec ${{ inputs.spec }} ${{ inputs.tag && `--tag ${inputs.tag}` }}
       env:
         CYPRESS_RECORD_KEY: ${{ inputs.record_key || fromJSON(inputs.secrets).CYPRESS_RECORD_KEY }}
         GITHUB_TOKEN: ${{ fromJSON(inputs.secrets).GITHUB_TOKEN }}
         CYPRESS_PROJECT_ID: ${{ inputs.project_id }}
         CYPRESS_WALLET_CREDENTIALS: ${{ fromJSON(inputs.secrets).CYPRESS_WALLET_CREDENTIALS }}
+        TAG_ARG: ${{ inputs.tag && `--tag ${inputs.tag}` }}
+
+    - name: Run Cypress Command
+      shell: bash
+      run: |
+        cypress run --spec ${{ inputs.spec }} $TAG_ARG
