--- a/.github/workflows/cypress/action.yml
+++ b/.github/workflows/cypress/action.yml
@@ -23,6 +23,10 @@ inputs:
     description: 'Cypress cloud record key'
     required: false
 
+  tag:
+    description: 'Cypress cloud tag key'
+    required: false
+
 runs:
   using: 'composite'
   steps:
