--- a/.github/workflows/cypress/action.yml
+++ b/.github/workflows/cypress/action.yml
@@ -54,6 +54,7 @@ runs:
         parallel: true
         browser: chrome
         record: true
+        tag: ${{ inputs.tag }}
         config: baseUrl=http://localhost:8080
       env:
         CYPRESS_RECORD_KEY: ${{ inputs.record_key || fromJSON(inputs.secrets).CYPRESS_RECORD_KEY }}
