--- a/.github/workflows/e2e-ondemand.yml
+++ b/.github/workflows/e2e-ondemand.yml
@@ -27,7 +27,9 @@ jobs:
             cypress/e2e/regression/*.cy.js
             cypress/e2e/safe-apps/*.cy.js
             cypress/e2e/smoke/*.cy.js
+            cypress/e2e/prodhealthcheck/*.cy.js
           group: 'Regression on demand tests'
+          tag: 'regression'
 
       - name: Python setup
         if: always()
