--- a/.github/workflows/cypress/action.yml
+++ b/.github/workflows/cypress/action.yml
@@ -39,6 +39,7 @@ runs:
         sudo apt-get install ./google-chrome-stable_current_amd64.deb
 
     - name: Install Cypress 13.13.1
+      shell: bash
       run: npm install cypress@13.13.1
 
     - uses: ./.github/workflows/build
