--- a/.github/workflows/cypress/action.yml
+++ b/.github/workflows/cypress/action.yml
@@ -40,7 +40,7 @@ runs:
 
     - name: Install Cypress 13.13.1
       shell: bash
-      run: npm install cypress@13.13.1
+      run: npm install cypress@13.13.1 --legacy-peer-deps
 
     - uses: ./.github/workflows/build
       with:
