Add timeouts for test jobs

--- a/.github/workflows/e2e-ondemand.yml
+++ b/.github/workflows/e2e-ondemand.yml
@@ -12,6 +12,7 @@ concurrency:
 jobs:
   e2e:
     runs-on: ubuntu-20.04
+    timeout-minutes: 40
     name: Cypress Regression on demand tests
     strategy:
       fail-fast: false
