--- a/.github/workflows/aggregate-outputs.yml
+++ b/.github/workflows/aggregate-outputs.yml
@@ -14,15 +14,17 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Jest Coverage Report
-        uses: actions/download-artifact@v4
+        uses: dawidd6/action-download-artifact@v6
         with:
+          commit: ${{github.event.pull_request.head.sha}}
           name:  jest-coverage-report
           path: .
         continue-on-error: true
 
       - name: Nextjs Bundle Analysis Report
-        uses: actions/download-artifact@v4
+        uses: dawidd6/action-download-artifact@v6
         with:
+          commit: ${{github.event.pull_request.head.sha}}
           name: next-bundle-analysis
           path: .
         continue-on-error: true
