--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: ./.github/workflows/yarn
 
       - name: Annotations and coverage report
+        id: jest-coverage
         uses: ArtiomTr/jest-coverage-report-action@v2
         with:
           skip-step: install
