save comment as artifact

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -23,16 +23,17 @@ jobs:
 
     steps:
       # Post a PR comment before deploying
-      - name: Post a comment while building
+      - name: Branch preview message
         if: github.event.number
-        uses: mshick/add-pr-comment@v2
+        run: |
+          echo "## Branch preview" > message.txt
+          echo "⏳ Deploying a preview site..." >> start_comment.txt
+
+      - name: Upload message artifact
+        uses: actions/upload-artifact@v3
         with:
-          message-id: praul
-          message: |
-            ## Branch preview
-            ⏳ Deploying a preview site...
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          repo-token-user-login: 'github-actions[bot]'
+          name: start-comment
+          path: start_comment.txt
 
       - uses: actions/checkout@v4
 
@@ -82,21 +83,23 @@ jobs:
           BUCKET: s3://${{ secrets.AWS_REVIEW_BUCKET_NAME }}/walletweb/${{ steps.extract_branch.outputs.branch }}
         run: bash ./scripts/github/s3_upload.sh
 
-      # Comment
-      - name: Post a deployment link in the PR
+      - name: Save success comment as artifact
         if: always() && github.event.number
-        uses: mshick/add-pr-comment@v2
+        run: |
+          echo "## Branch preview
+          ✅  Deploy successful!
+          
+          **Website:**
+          https://${{ steps.extract_branch.outputs.branch }}--walletweb.review.5afe.dev/home?safe=eth:0xA77DE01e157f9f57C7c4A326eeE9C4874D0598b6
+          
+          **Storybook:**
+          https://${{ steps.extract_branch.outputs.branch }}--walletweb.review.5afe.dev/storybook/" > done_comment.txt
+
+      - name: Save failure comment as artifact
+        if: failure() && github.event.number
+        run: echo "## Branch preview\n❌  Deploy failed!" > done_comment.txt
+
+      - uses: actions/upload-artifact@v3
         with:
-          message-id: praul
-          message: |
-            ## Branch preview
-            ✅  Deploy successful!
-
-            **Website:**
-            https://${{ steps.extract_branch.outputs.branch }}--walletweb.review.5afe.dev/home?safe=eth:0xA77DE01e157f9f57C7c4A326eeE9C4874D0598b6
-
-            **Storybook:**
-            https://${{ steps.extract_branch.outputs.branch }}--walletweb.review.5afe.dev/storybook/
-          message-failure: |
-            ## Branch preview
-            ❌  Deploy failed!
+          name: done-comment
+          path: done_comment.txt
