Temp: comment out storybook build

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -43,7 +43,7 @@ jobs:
           secrets: ${{ toJSON(secrets) }}
           if: startsWith(github.ref, 'refs/heads/main')
 
-      - uses: ./.github/workflows/build-storybook
+      #- uses: ./.github/workflows/build-storybook
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
