--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "@safe-global/protocol-kit": "^4.0.4",
     "@safe-global/safe-apps-sdk": "^9.1.0",
     "@safe-global/safe-deployments": "^1.37.3",
-    "@safe-global/safe-gateway-typescript-sdk": "3.22.1",
     "@safe-global/safe-modules-deployments": "^1.2.0",
+    "@safe-global/safe-gateway-typescript-sdk": "3.22.1",
     "@sentry/react": "^7.91.0",
     "@spindl-xyz/attribution-lite": "^1.4.0",
     "@walletconnect/utils": "^2.13.1",
@@ -91,6 +91,7 @@
     "react-hook-form": "7.41.1",
     "react-papaparse": "^4.0.2",
     "react-redux": "^9.1.2",
+    "safe-client-gateway-sdk": "git+https://github.com/safe-global/safe-client-gateway-sdk.git#v1.53.0-next-7344903",
     "semver": "^7.5.2",
     "zodiac-roles-deployments": "^2.2.5"
   },
