--- a/.env.example
+++ b/.env.example
@@ -38,8 +38,8 @@ NEXT_PUBLIC_FIREBASE_VAPID_KEY_PRODUCTION=
 NEXT_PUBLIC_FIREBASE_OPTIONS_STAGING=
 NEXT_PUBLIC_FIREBASE_VAPID_KEY_STAGING=
 
-# Redefine
-NEXT_PUBLIC_REDEFINE_API=
+# Blockaid
+NEXT_PUBLIC_BLOCKAID_CLIENT_ID
 
 # Social Login
 NEXT_PUBLIC_SOCIAL_WALLET_OPTIONS_STAGING=
