Chore: add check write permissions to test and lint CI jobs

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -12,6 +12,9 @@ concurrency:
 
 jobs:
   test:
+    permissions:
+      checks: write
+
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
