--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,6 +7,9 @@ concurrency:
 
 jobs:
   eslint:
+    permissions:
+      checks: write
+
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
