Add more permissions

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,6 +9,8 @@ jobs:
   eslint:
     permissions:
       checks: write
+      pull-requests: read
+      statuses: write
 
     runs-on: ubuntu-latest
     steps:
