--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -14,6 +14,8 @@ jobs:
   test:
     permissions:
       checks: write
+      pull-requests: read
+      statuses: write
 
     runs-on: ubuntu-latest
     steps:
