opt in safenet in settings

--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,8 @@ NEXT_PUBLIC_BLOCKAID_CLIENT_ID
 NEXT_PUBLIC_SOCIAL_WALLET_OPTIONS_STAGING=
 NEXT_PUBLIC_SOCIAL_WALLET_OPTIONS_PRODUCTION=
 
+# Cypress wallet private keys
+CYPRESS_WALLET_CREDENTIALS=
+
+# SafeNet
+NEXT_PUBLIC_SAFENET_API_URL=
